Removed display inline-block to solve layout issues in some cases.
When a variable value is very long, the browser word wraps it strangely.

--- a/css/marked-variables.css
+++ b/css/marked-variables.css
@@ -2,7 +2,6 @@
     background:#fffd71;
     border-radius:4px;
     padding:0px 2px;
-    display:inline-block;
 }
 
 .mailcode-marked-variable:hover{
